02_CSS(실습2-4)_2023/12/08_EndOfClass
2023/12/08 5:17pm

--- a/2_CSS/css/09_그리드.css
+++ b/2_CSS/css/09_그리드.css
@@ -37,3 +37,18 @@
   grid-row: 2/4;
   grid-column: 1/3;
 }
+
+/* 6. justify0items, align-items */
+.container {
+  justify-items: start;
+  justify-items: center;
+  justify-items: end;
+
+  align-items: start;
+  align-items: center;
+  align-items: end;
+}
+.item:nth-child(6) {
+  justify-self: center;
+  align-self: center;
+}
