--- a/Pratice/CSS_pratice/The-K한국교직원공제회.css
+++ b/Pratice/CSS_pratice/The-K한국교직원공제회.css
@@ -1,20 +1,22 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 header {
-    background-color: red;
-    text-align: center;
-    width: 100%;
+  background-color: red;
+  text-align: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
-header h1, nav{
-    display: flex;
-    justify-content: center;
+nav {
+  display: flex;
+  align-items: center;
 }
 header h1 {
-    color: white;
-    font-size: 1rem;
-    font-weight: bold;
-    padding: 15px;
+  color: white;
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 15px;
 }
