--- a/Pratice/CSS_pratice/The-K한국교직원공제회.css
+++ b/Pratice/CSS_pratice/The-K한국교직원공제회.css
@@ -11,8 +11,15 @@ header {
   justify-content: center;
 }
 nav {
+  width: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+header nav a {
+  color: white;
+}
+.content-signin {
 }
 header h1 {
   color: white;
