--- a/Pratice/CSS_pratice/The-K한국교직원공제회.css
+++ b/Pratice/CSS_pratice/The-K한국교직원공제회.css
@@ -9,19 +9,24 @@ header {
   width: 100%;
   display: flex;
   justify-content: center;
+  height: 60px;
 }
 nav {
-  width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 header nav a {
+  background-color: grey;
   color: white;
+  display: inline-block;
+  height: 60px;
+  line-height: 60px;
 }
 header h1 {
+  display: flex;
+  align-items: center;
+  background-color: blue;
   color: white;
   font-size: 1rem;
   font-weight: bold;
-  padding: 15px;
+  margin-right: 10px;
 }
