--- a/Pratice/실습css2-2연습.css
+++ b/Pratice/실습css2-2연습.css
@@ -1,11 +1,66 @@
 header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  height: 70px;
+  position: fixed;
+  background: white;
+  width: 100%;
+}
+header .header-left {
+  font-size: 2.5rem;
+  margin-left: 20px;
 }
 header nav {
   display: flex;
   justify-content: space-between;
 }
-.heading {
-  margin: 0 10px;
+header nav a {
+  color: black;
+  text-decoration: none;
+  margin: 15px;
+  display: inline-block;
+}
+.logo {
+  font-style: italic;
+}
+section {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+main h2 {
+  font-weight: bold;
+  font-size: 2rem;
+  padding-bottom: 10px;
+}
+main p {
+  width: 80%;
+  text-align: center;
+}
+section:nth-child(1) {
+  background: red;
+}
+section:nth-child(2) {
+  background-color: yellow;
+}
+section:nth-child(3) {
+  background: purple;
+}
+.top {
+  font-size: 1.5rem;
+  text-decoration: none;
+  color: white;
+  background: black;
+  display: flex;
+  width: 100px;
+  height: 100px;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  border-radius: 50%;
+  right: 10px;
+  bottom: 10px;
 }
