--- a/coupang/style.css
+++ b/coupang/style.css
@@ -1,5 +1,6 @@
 :root {
   --main-color: #4285f4;
+  --main-border: 1px solid #eee;
 }
 
 .container {
@@ -110,7 +111,7 @@ p {
   transform: translateX(30px);
   align-items: center;
   margin-right: 10px;
-  transition: 2s;
+  transition: 0.3s;
 }
 .header-main-bottom a.header-main-bottom-right {
   transform: translateX(-375px);
@@ -142,30 +143,28 @@ p {
 }
 
 /* header - category */
+.category-btn {
+  position: relative;
+}
 .category {
-  background: white;
-  border: 1px solid #eee;
   position: absolute;
-  top: 155px;
-  display: flex;
+  background: white;
+  border: var(--main-border);
+  top: 121px;
+  left: 0px;
+  color: black;
   display: none;
 }
+.category-btn:hover .category {
+  display: block;
+}
 .category-list {
-  margin: 10px;
   width: 170px;
+  margin: 5px;
 }
 .category-item {
   display: flex;
-  margin: 20px 0;
-}
-.category-item i:hover {
-  color: var(--main-color);
-}
-.category-item:hover span {
-  text-decoration: underline;
-}
-.category-item:hover i:last-child {
-  display: inline;
+  padding: 10px 0;
 }
 .category-item span {
   flex: 1;
@@ -175,26 +174,163 @@ p {
   width: 40px;
   text-align: center;
 }
-.category-item i:last-child {
+.category-item i:nth-child(3) {
+  font-size: 1.1rem;
+  margin-right: 10px;
   display: none;
 }
-.category-sub {
-  position: relative;
-  width: 600px;
-  display: none;
+.category-item span {
+  color: black;
+}
+.category-item:hover i:nth-child(3) {
+  display: block;
+}
+.category-item i {
+  color: black;
+}
+.category-item:hover i {
+  color: var(--main-color);
+}
+.category-item:hover span {
+  text-decoration: underline;
+  color: var(--main-color);
+}
+.category-item:hover .category-sub-item {
+  display: flex;
 }
 .category-sub-item {
-  background-color: white;
-  width: 100%;
   position: absolute;
-  top: 0;
-  right: 0;
-  height: 435px;
+  top: 0px;
+  left: 0px;
+  left: 177px;
+  background: white;
+  top: -1px;
+  left: 175px;
+  display: flex;
+  width: 600px;
+  height: 504px;
+  padding: 5px 10px;
+  border: var(--main-border);
   display: none;
+}
+.category-sub-item ul {
+  width: 156px;
+}
+.category-sub-item ul li {
+  padding: 10px 0;
+}
+.category-sub-item ul li:hover a {
+  text-decoration: underline;
+  color: var(--main-color);
 }
 .category-sub-item img {
   position: absolute;
-  width: 450px;
   bottom: 0;
   right: 0;
+  width: 465px;
+}
+.category-item:nth-child(2) .category-sub-item {
+  top: -1px;
+}
+.category-item:nth-child(3) .category-sub-item {
+  top: -1px;
+}
+.category-item:nth-child(4) .category-sub-item {
+  top: -1px;
+}
+.category-item:nth-child(5) .category-sub-item {
+  top: -1px;
+}
+.category-item:nth-child(6) .category-sub-item {
+  top: -1px;
+}
+.category-item:nth-child(7) .category-sub-item {
+  top: -1px;
+}
+.category-item:nth-child(8) .category-sub-item {
+  top: -1px;
+}
+.category-item:nth-child(9) .category-sub-item {
+  top: -1px;
+}
+.category-item:nth-child(10) .category-sub-item {
+  top: -1px;
+}
+
+/* main */
+
+main img {
+  display: none;
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+}
+.main-img-active {
+  display: block;
+}
+
+/* section : 오늘의 발견 */
+section h2 {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-top: 20px;
+}
+.discovery-list h2 span {
+  font-size: 0.9rem;
+  font-weight: normal;
+  color: #333;
+}
+.discovery-list-items {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  border: var(--main-border);
+  padding: 10px;
+  margin-top: 20px;
+}
+.discovery-list-items a {
+  border: var(--main-border);
+}
+.discovery-list-items a:first-child {
+  grid-column: 1 / 3;
+}
+.discovery-list-items a:nth-child(2) {
+  grid-column: 3 / 5;
+}
+/* section :카테고리별 추천 광고 상품 */
+
+.category-best h2 {
+  line-height: 1.5;
+}
+.category-best h2 span:first-child {
+  display: block;
+  font-size: 1rem;
+}
+.category-best h2 span:last-child {
+  color: var(--main-color);
+}
+.category-best-items {
+  background-color: #f6699e;
+  width: 100%;
+  height: 600px;
+  margin: 10px;
+}
+.category-menu {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  background: skyblue;
+  border: var(--main-border);
+  top: 10px;
+  left: 205px;
+  display: none;
+}
+.category-menu a {
+  display: block;
+  padding: 10px 0;
+}
+.category-menu i {
+  font-size: 1.2rem;
+  width: 40px;
+  text-align: center;
 }
